# super-easypypi

./: README.md  build  setup.cfg
src/supereasypypi/: __main__.py  cli.py  template.py
