[metadata]
version = 0.0.10
name = super-easypypi
author = yell0w4x
author_email = yell0w4x@gmail.com
description = Super easypypi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yell0w4x/super-easypypi
project_urls =
    Bug Tracker = https://github.com/yell0w4x/super-easypypi/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = MIT
keywords = easy pypi


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 

[options.packages.find]
where = src


[options.entry_points]
console_scripts = 
    supereasypypi = supereasypypi.cli:main

